--- a/login.ui
+++ b/login.ui
@@ -39,7 +39,7 @@
       <string>Login</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="Signup">
      <property name="geometry">
       <rect>
        <x>132</x>
@@ -52,49 +52,54 @@
       <string>Sign Up</string>
      </property>
     </widget>
-    <widget class="QWidget" name="">
-     <property name="geometry">
-      <rect>
-       <x>26</x>
-       <y>40</y>
-       <width>193</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLabel" name="LUname">
-        <property name="text">
-         <string>User Name</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="TUname"/>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="">
+    <widget class="QLabel" name="LUname">
      <property name="geometry">
       <rect>
        <x>27</x>
-       <y>91</y>
-       <width>191</width>
-       <height>22</height>
+       <y>41</y>
+       <width>52</width>
+       <height>16</height>
       </rect>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="Lpass">
-        <property name="text">
-         <string>Password</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="Tpass"/>
-      </item>
-     </layout>
+     <property name="text">
+      <string>User Name</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="TUname">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>41</y>
+       <width>133</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="Lpass">
+     <property name="geometry">
+      <rect>
+       <x>28</x>
+       <y>92</y>
+       <width>52</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Password  </string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="Tpass">
+     <property name="geometry">
+      <rect>
+       <x>86</x>
+       <y>92</y>
+       <width>131</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
     </widget>
    </widget>
    <widget class="QLabel" name="LPic">
@@ -107,7 +112,7 @@
      </rect>
     </property>
     <property name="text">
-     <string> </string>
+     <string/>
     </property>
    </widget>
   </widget>
