--- a/login.ui
+++ b/login.ui
@@ -101,6 +101,19 @@
       <enum>QLineEdit::Password</enum>
      </property>
     </widget>
+    <widget class="QLabel" name="Lerror">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>140</y>
+       <width>131</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QLabel" name="LPic">
     <property name="geometry">
@@ -113,6 +126,9 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="rsources.qrc">:/login/img/login.png</pixmap>
     </property>
    </widget>
   </widget>
@@ -137,6 +153,8 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="rsources.qrc"/>
+ </resources>
  <connections/>
 </ui>
