--- a/login.ui
+++ b/login.ui
@@ -35,8 +35,17 @@
        <height>23</height>
       </rect>
      </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
      <property name="text">
       <string>Login</string>
+     </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QPushButton" name="Signup">
@@ -47,6 +56,9 @@
        <width>75</width>
        <height>23</height>
       </rect>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
      </property>
      <property name="text">
       <string>Sign Up</string>
@@ -74,6 +86,9 @@
        <height>20</height>
       </rect>
      </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
     </widget>
     <widget class="QLabel" name="Lpass">
      <property name="geometry">
@@ -96,6 +111,9 @@
        <width>131</width>
        <height>20</height>
       </rect>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
@@ -140,6 +158,9 @@
       <height>23</height>
      </rect>
     </property>
+    <property name="tabletTracking">
+     <bool>true</bool>
+    </property>
     <property name="text">
      <string>Forget Password?</string>
     </property>
@@ -166,6 +187,13 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <tabstops>
+  <tabstop>TUname</tabstop>
+  <tabstop>Tpass</tabstop>
+  <tabstop>loginButton</tabstop>
+  <tabstop>Signup</tabstop>
+  <tabstop>forgetButton</tabstop>
+ </tabstops>
  <resources>
   <include location="rsources.qrc"/>
  </resources>
