--- a/main page.ui
+++ b/main page.ui
@@ -31,6 +31,9 @@
     <property name="text">
      <string>Purchase Dataset</string>
     </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="sell_btn">
     <property name="geometry">
@@ -48,6 +51,9 @@
     </property>
     <property name="text">
      <string>Sell Dataset</string>
+    </property>
+    <property name="autoDefault">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -80,6 +86,9 @@
     <property name="text">
      <string>View Data Request</string>
     </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="post_req_btn">
     <property name="geometry">
@@ -98,6 +107,9 @@
     <property name="text">
      <string>Post Data Request</string>
     </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="my_req_btn">
     <property name="geometry">
@@ -115,6 +127,9 @@
     </property>
     <property name="text">
      <string>My Request</string>
+    </property>
+    <property name="autoDefault">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
