--- a/globalreq/addrequest.ui
+++ b/globalreq/addrequest.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Create Request</string>
   </property>
   <widget class="QTextEdit" name="desbox">
    <property name="geometry">
