--- a/globalreq/QAA.ui
+++ b/globalreq/QAA.ui
@@ -162,6 +162,27 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="Lstatus">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>90</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>fulfilled</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <zorder>requestButton</zorder>
    <zorder>desbox</zorder>
    <zorder>label</zorder>
@@ -170,6 +191,7 @@
    <zorder>scrollArea</zorder>
    <zorder>Ltitle</zorder>
    <zorder>comentButton</zorder>
+   <zorder>Lstatus</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
